using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTag
{
   public const string PUNCH_1_TRIGGER = "Punch1";
   public const string PUNCH_2_TRIGGER = "Punch2";
   public const string PUNCH_3_TRIGGER = "Punch3";
   public const string KICK_1_TRIGGER = "Kick1";
   public const string KICK_2_TRIGGER = "Kick2";

    public const string ATTACK_1_TRIGGER = "Attack1";
    public const string ATTACK_2_TRIGGER = "Attack2";

    public const string HIT_TRIGGER = "Hit";
     
        

    public const string IS_WALKING = "isWalking";

    public const string DEATH_TRIGGER = "Death";
}

public class Tags
{
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";

    public const string LEFT_ARM_TAG = "LeftArm";
    public const string RIGHT_ARM_TAG = "RightArm";
    public const string MAIN_CAMERA_TAG = "MainCamera";
    public const string HEALTH_UI_TAG = "HealthUI";
}
